--- a/site/output/why-update-vcr-test-fixtures-data.html
+++ b/site/output/why-update-vcr-test-fixtures-data.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>How Can I Contribute?</title>
+    <title>Why Update The VCR Fixtures</title>
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -97,91 +97,105 @@
 
       <p><br></p>
 
-<h3 id="contribute">Contribute to Deltacloud</h3>
-<p>Deltacloud project is a free open source software licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache Software Foundation</a> license. The developers community is open to anyone who wants to contribute. Contributors are required to sign an individual contributor <a href="http://www.apache.org/licenses/icla.txt">license agreement</a>. Do not hesitate to <a href="contact.html">contact us</a> if you have any questions about contributing to the Deltacloud project.</p>
-
-<h4 id="how">How can I contribute?</h4>
-
-<ul class="nav nav-list">
-<li class="nav-header">
-  </li>
+<ul class="breadcrumb">
 <li>
-    <a href="send-patch.html">Send a patch</a>
+    <a href="white-box-tests.html">White Box Tests?</a> <span class="divider">/</span>
   </li>
+  <li class="active">Why Update The VCR Fixtures</li>
+</ul><p>
+Deltacloud uses pre-recorded <a href="https://github.com/vcr/vcr">VCR</a> YAML
+files called <i>fixtures</i> to allow test execution without the need for a live
+cloud provider.
+</p>
+
+<p>
+The <i>fixtures</i> YAML files are located under:
+<u><b>REPO</b>/deltacloud/server/tests/drivers/<i>driver name</i>/fixtures</u>
+</p>
+
+<p>
+A live cloud provider, with valid credentials, needs to be used in order to
+<a href="https://www.relishapp.com/vcr/vcr/v/1-6-0/docs/record-modes">record</a>
+the fixtures YAML files but once recorded the tests can then be executed without
+a live cloud provider.
+</p>
+
+<p>
+Because valid credentials are used to record the VCR fixtures data care must be
+taken to either alter the credentials on the live cloud provider or remove them
+from the fixtures data after doing the recording.
+More on how to do this can be found in
+<a href="update-vcr-test-fixtures-data-example.html">Updating VCR Fixtures Example</a>
+</p>
+
+<h3>Why VCR data May Need Updating:</h3>
+
+<p>
+In some cases you will need to re-record the VCR fixtures for particular test.
+This happen when a request is made to the backend cloud provider that a
+test does not yet exercise. <b>For Example:</b>
+</p>
+
+<ul>
+<li>
+    <p>
+    A bug is fixed in the EC2 driver, where <i>images()</i> method had not work properly.
+    </p>
+    <ol>
+<li>
+        <p>Open <i>tests/drivers/ec2/images_tests.rb</i></p>
+      </li>
+      <li>
+        <p>Add a new test to capture this bug.</p>
+        <p>At the end of this file and add a the new code:</p>
+        <pre>
+        it 'should provide correct output' do
+          # assertions go here
+        end
+        </pre>
+      </li>
+    </ol>
+</li>
+
   <li>
-    <a href="write-new-driver.html">Write a provider driver</a>
-  </li>
+    <p>
+    Scenario: You added new collection <i>oranges()</i> into RHEV-M driver.
+    </p>
+    <ol>
+<li>
+        <p>Write all driver methods tests here: <i>tests/drivers/rhevm/oranges_tests.rb</i></p>
+      </li>
+      <li>
+        <p>Create <i>tests/deltacloud/collections/oranges_collection_tests.rb</i></p>
+      </li>
+      <li>
+        <p>Write all collection operations tests here ^^</p>
+      </li>
+    </ol>
+</li>
+
   <li>
-    <a href="#bug">Report a bug</a>
-  </li>
-  <li>
-    <a href="#idea">Propose an idea</a>
-  </li>
-  <li>
-    <a href="#documentation">Write documentation</a>
-  </li>
-  <li>
-    <a href="white-box-tests.html">Validate contributions using the white box tests</a>
-  </li>
-</ul><p><br></p>
+    <p>
+    A bug is fixed in the Deltacloud frontend where <i>/api/images/123/create</i>
+    operation does not provide correct status code. You corrected it.
+    </p>
+    <ol>
+<li>
+        <p>Open 'tests/deltacloud/collections/images_collection_test.rb'</p>
+      </li>
+      <li>
+        <p>Locate this line: </p>
+          <pre>
+          it 'allow to create and destroy the new image' do
+          </pre>
+      </li>
+      <li>
+        <p>Provide the correct value into 'status.must_equal' method</p>
+      </li>
+    </ol>
+</li>
 
-<h3>Overview of the Deltacloud directory structure</h3>
-
-<p>The following list contains paths to essential files and directories for developers. It is intended as a help with orientation in the project directory - for example to quickly identify where the Deltacloud cloud provider drivers are stored:</p>
-
-<div class="row">
-  <div class="span1"></div>
-  <div class="span10 offset1">
-<pre>
-deltacloud
-|-----------------------------------------------------------------------------------
-|-d--&gt;tests                           Contains Cucumber tests
-|-----------------------------------------------------------------------------------
-|-d--&gt;site                            Files for this website
-|-----------------------------------------------------------------------------------
-|-d--&gt;client                          Contains the Deltacloud ruby client
-|-----------------------------------------------------------------------------------
-|-d--&gt;clients                         Contains other Deltacloud clients (e.g. java)
-|-----------------------------------------------------------------------------------
-|-d--&gt; server
-       |----------------------------------------------------------------------------
-       |-d--&gt;bin                      Contains the Deltacloud executable deltacloudd
-       |----------------------------------------------------------------------------
-       |-d--&gt;views                    Contains haml views for each collection
-       |----------------------------------------------------------------------------
-       |-d--&gt;tests                    Contains unit tests for drivers
-       |----------------------------------------------------------------------------
-       |-d--&gt;lib
-             |----------------------------------------------------------------------
-             |-d--&gt;sinatra            Contains rabbit DSL and various helpers
-             |----------------------------------------------------------------------
-             |-d--&gt;deltacloud
-                   |----------------------------------------------------------------
-                   |-d--&gt;models       Definition of each collection model
-                   |----------------------------------------------------------------
-                   |-d--&gt;drivers      Contains the drivers for each cloud provider
-                   |----------------------------------------------------------------
-                   |-d--&gt;helpers      Various helper methods used by the drivers
-                   |----------------------------------------------------------------
-                   |-d--&gt;base_driver  Contains the Deltacloud base driver
-                   |----------------------------------------------------------------
-                   |-f--&gt;server.rb                Contains the sinatra routes
-                   |----------------------------------------------------------------
-</pre>
-
-  </div>
-</div>
-
-<p><br></p>
-
-<h3 id="bug">Reporting a bug</h3>
-<p>We track bugs in <a href="https://issues.apache.org/jira/browse/DTACLOUD">Apache JIRA</a>. When you discover a problem with Deltacloud functionality, check JIRA if someone has already reported the issue to the Deltacloud developers. Otherwise, <a href="https://issues.apache.org/jira/secure/CreateIssue!default.jspa">report it</a>.</p>
-
-<h3 id="idea">Proposing an idea</h3>
-<p>Have you found a way how to improve Deltacloud project? Do you miss a feature or a tool, which we could include into Deltacloud? Our <a href="http://teambox.com/projects/deltacloud">Teambox</a> page is a place where we keep the latest task lists and where you can add comments or suggest new features for the project.</p>
-
-<h3 id="documentation">Writing documentation</h3>
-<p>You can also contribute with a piece of documentation. There are still things which needs to be described. If you found one like that and you are interested in writing a couple of sentences about the particular issue, please, don’t hesitate to do it and <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">send us</a> your contribution. We really appreciate your help.</p>
+</ul>
 
       <footer class="footer">
         <p class="pull-right"><span class='icon-circle-arrow-up'>&nbsp;</span><a href="#">Back to top</a></p>
