SITE: Update test recording instructions
This is required to better describe recent changes
for parameterizing recording and provider configuration
of credentials and resources to avoid having to edit
test source code in order to record test fixtures.
TrackedAt: http://tracker.deltacloud.org/patch/9723a4aa34c7b445973301facebb13399064aab4

--- a/site/output/running-the-white-box-tests.html
+++ b/site/output/running-the-white-box-tests.html
@@ -104,8 +104,9 @@
   <li class="active">Running The White Box Tests</li>
 </ul><h3>Running the white box tests</h3>
 
-<p>The tests can be executed in groups, using tasks in the Rakefile, or
-   individually.</p>
+<p>After getting the source and <a href="getting-sources.html"> setting
+up the development environment</a>, the tests can be executed in groups,
+using tasks in the Rakefile, or individually using ruby directly.</p>
 
 <ul>
 <li>
@@ -122,24 +123,30 @@
     </li>
 
     <li>
-      <p>Rake task to run the various <b><u><i>Frontend </i></u></b> tests: </p>
+      <p>Example of listing the available subtasks have available tests: </p>
       <pre>
       % cd <b>REPO</b>/deltacloud/server
-      % rake test:base            # Run tests for base
-      % rake test:cimi:models     # Run tests for models
+      % rake -T test
+      <i>output list or available tests</i>
+      </pre>
+    </li>
+
+    <li>
+      <p>Example rake task to run ec2 <b><u><i>frontend </i></u></b> tests: </p>
+      <pre>
+      % cd <b>REPO</b>/deltacloud/server
       % rake test:ec2             # Run tests for ec2
       </pre>
     </li>
 
     <li>
-      <p>Rake task to run the various <b><u><i>Driver </i></u></b>  tests: </p>
+      <p>Example rake task to run the rhevm <b><u><i>driver </i></u></b>  tests: </p>
       <pre>
       % cd <b>REPO</b>/deltacloud/server
-      % rake test:drivers:ec2     # Run tests for ec2
-      % rake test:drivers:mock    # Run tests for mock
       % rake test:drivers:rhevm   # Run tests for rhevm
       </pre>
-     </li>
+    </li>
+
   </ul>
 <li>
     <p>Example manually running an <b><u><i>individual</i></u></b> test: </p>
