--- a/site/output/update-vcr-test-fixtures-data-example.html
+++ b/site/output/update-vcr-test-fixtures-data-example.html
@@ -118,12 +118,18 @@ More information can be found on the past recording of the
 <ol>
 <li>
     <p> Create ${HOME}/.deltacloud/config</p>
+    <br><p> Create the deltacloud config file: ${HOME}/.deltacloud/config</p>
+    to contain the credentials and provider resource UUIDs
 
     <pre>
     rhevm:
       user:     'admin@internal'
       password: 'localpassword'
-      provider: 'https://16.1.1.3/api;b9bb11c2-f397-4f41-a57b-7ac15a894779'
+      provider: 'https://rhevm.example.com/api'
+      preferred:
+        datacenter: UUID of a datacenter/realm
+        vm: UUID of an existing instance
+        template: UUID of an existing template/image
     mock:
       user: mockuser
       password: mockpassword
@@ -133,38 +139,16 @@ More information can be found on the past recording of the
   </pre>
 </li>
 <li>
-    <p>Modify the test source to have the realm, instance, image &amp; provider
-       for a live cloud provider.</p>
+    <p>Set the VCR record mode to <i>all</i></p>
+    <br><p> Note: This does not cause <i>all</i> tests to be recorded.
+    It instructs VCR to record new fixtures data for the test to
+    be run in the next step.</p>
 
     <pre>
-    % vim server/tests/drivers/rhevm/instance_test.rb
-    ...
-    TST_REALM    = '12345678-123a-123b-123c-123456789abc'
-    TST_INSTANCE = '23456781-23a1-23b1-23c1-23456789abce'
-    TST_IMAGE    = '34567812-3a12-3b12-3c12-3456789abcef'
-    ...
-        @driver = Deltacloud::Test::config.driver(:rhevm,
-          provider="https://16.1.1.3/api;b9bb11c2-f397-4f41-a57b-7ac15a894779")
+    % export VCR_RECORD="all"
     </pre>
 
   </li>
-
-  <li>
-    <p>Set the VCR record mode to :record =&gt; :all</p>
-
-    <pre>
-    % vim server/tests/drivers/rhevm/common.rb
-    ...
-    # Set :record to :all, when re-recording and between re-record attemps
-    # be sure to clear fixtures/*.yml files which can be done with "git checkout".
-    # e.g.:
-    c.default_cassette_options = { :record =&gt; :all }
-    # c.default_cassette_options = { :record =&gt; :none }
-    ...
-    </pre>
-
-  </li>
-
 
   <li>
     <p>Run the test in record mode</p>
@@ -172,15 +156,15 @@ More information can be found on the past recording of the
     <pre>
     % cd YOUR-REPO/deltacloud/server
 
-    # Record only the single test
+    # Record only the single test:
     % ruby tests/drivers/rhevm/instance_test.rb
 
-    or
+    <b>or</b>
 
     # Record the drivers:rhevm tests:
     % rake test:drivers:rhevm
 
-    or
+    <b>or</b>
 
     # Record all the tests:
     % rake test
@@ -189,72 +173,18 @@ More information can be found on the past recording of the
   </li>
 
   <li>
-    <p>Remove the user:password creds from the fixture.</p>
-
-    <p>
-    The recorded fixture will contain live creds. For security reasons
-    it is best to either change the credentials on the cloud provider or
-    remove them from the fixture YAML file. Removing them from the fixture
-    YAML file can easily be accomplished using sed.
-    </p>
+    <p>Disable record mode.
+    <br></p>
+<p>This will allow the test to be run in playback mode using the
+    recorded  fixtures data.</p>
 
     <pre>
-    e.g.:
-    for i in $(ls tests/drivers/rhevm/fixtures/test_0*.yml); do \
-      echo $i; \
-      cat $i | sed s/admin%40internal:localpassword/fakeuser:fakepassword/ &gt; $i.new; \
-      mv $i.new $i; \
-    done
-    </pre>
-
-  </li>
-
-  <li>
-    <p>Remove ${HOME}/.deltacloud/config</p>
-
-    <p>
-    This is done to avoid using the credentials from the config file
-    during non-recording test runs.
-    </p>
-
-    <pre>
-    e.g.: (note it might be best to save it in ".ORIG" for future re-recordings.)
-    mv ${HOME}/.deltacloud/config ${HOME}/.deltacloud/config.ORIG
-    </pre>
-  </li>
-
-  <li>
-    <p>Turn off record mode.
-
-    </p>
-<p>To turn off record mode set the record mode to { :record =&gt; :none }</p>
-
-    <pre>
-    % vim server/tests/drivers/rhevm/common.rb
-    ...
-    # Set :record to :all, when re-recording and between re-record attemps
-    # be sure to clear fixtures/*.yml files which can be done with "git checkout".
-    # e.g.:
-    # c.default_cassette_options = { :record =&gt; :all }
-    c.default_cassette_options = { :record =&gt; :none }
-    ...
+    % unset VCR_RECORD
     </pre>
 
   
-
   </li>
 <li>
-    <p>Remove trailing white space from the fixtures YAML files.</p>
-
-    <p>
-    Recording can place trailing white space in the fixtures YAML files
-    which can be removed or ignored.
-    </p>
-
-    <p>There are many ways to accomplish this.</p>
-  </li>
-
-  <li>
     <p>Confirm all tests run in mock mode</p>
 
     <pre>
@@ -263,12 +193,12 @@ More information can be found on the past recording of the
     # Run only the single tests that had been re-recorded
     % ruby tests/drivers/rhevm/instance_test.rb
 
-      and
+      <b>and</b>
 
     # Run all tests in that section:
     % rake test:drivers:rhevm
 
-      and
+      <b>and</b>
 
     # Record all the tests:
     % rake test
